--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,16 @@
       <artifactId>http-builder</artifactId>
       <version>0.7</version>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>1.9.5</version>
+    </dependency>
+    <dependency>
+      <groupId>com.cyrusinnovation</groupId>
+      <artifactId>mockito-groovy-support</artifactId>
+      <version>1.3</version>
+    </dependency>
   </dependencies>
 
   <licenses>
