--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
                         <artifactId>xml-apis</artifactId>
                         <version>1.4.01</version>
                     </dependency>
+                         <dependency>
+                        <groupId>org.apache.httpcomponents</groupId>
+                        <artifactId>httpclient</artifactId>
+                        <version>4.5.1</version>
+                    </dependency>
                 </dependencies>
                 <executions>
                     <execution>
